schemm/parse.peg

start =
	expression

validchar
	= [0-9a-zA-Z_?!+\-=@#$%^&*/.]

validcharPlusPlus
	= [0-9a-zA-Z_?!+\-=@#$%^&*/. \t';]

spaceFamily =
	" "
	/ "\n"
	/ "\t"
	/ comment

comment =
	";;" validcharPlusPlus* "\n"*

atom =
	validNumbers
	/ validChars

validNumbers =
	numbers:[0-9]+
	{ return parseInt(numbers.join("")); }


validChars =
	chars:validchar+
	{ return chars.join(""); }

spaceAtom =
	spaceFamily* theAtom:expression
	{ return theAtom; }

molecule =
	emptyMolecule
	/ fullMolecule

emptyMolecule =
	spaceFamily* "(" spaceFamily* ")" spaceFamily*
	{ return []; }

fullMolecule =
	spaceFamily* "(" spaceFamily* firstAtom:expression restAtom:spaceAtom* spaceFamily* ")" spaceFamily*
	{ return [firstAtom].concat(restAtom); }

expression =
	quoted
	/ nonQuoted

quoted =
	"'" first:expression
	{ return ["quote",first]; }

nonQuoted =
	atom
	/ molecule
